// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Trackey's registerCompany destination action: all fields 1`] = `
Object {
  "groupId": "XKWTBCZ%QyH",
  "messageId": "XKWTBCZ%QyH",
  "timestamp": "XKWTBCZ%QyH",
  "traits": Object {
    "testType": "XKWTBCZ%QyH",
  },
  "userId": "XKWTBCZ%QyH",
}
`;

exports[`Testing snapshot for Trackey's registerCompany destination action: required fields 1`] = `
Object {
  "groupId": "XKWTBCZ%QyH",
  "timestamp": "XKWTBCZ%QyH",
  "userId": "XKWTBCZ%QyH",
}
`;
